# containers

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_and_run.sh  docker_run.sh  main.cc  s21_array.h  s21_list.h  s21_map.h  s21_multiset.h  s21_queue.h  s21_rb_tree.h  s21_rb_tree.ipp  s21_rb_tree.tpp  s21_set.h  s21_stack.h  s21_vector.h
.github/workflows/: ci.yml
deque/: .gdbinit  Makefile  deque.cc  deque.h  diagram(4).json  s21_deque.h  t.cc
deque/deque_map/: deque.h
deque/deque_map/src/: constructors.cc  methods.cc  operators.cc  utils.cc
deque/include/: deq_it.h  deque.h
deque/src/: constructors.cc  deque.cc  methods.cc  utils.cc
deque/src/block_schemes/: INCLUDES.json  RA.json
deque/src/iterator/: deq_it_constructors.cc
deque/test_dir/: constructors.cc  test_main.cc  test_main.h
deque/testing/: main.cc  t.cc  te
scripts/git-hooks/pre-push/: pre-push
stl_docks/: containers_info_rus.md
tests/: s21_test_array.cc  s21_test_list.cc  s21_test_map.cc  s21_test_multiset.cc  s21_test_queue.cc  s21_test_rb_tree.cc  s21_test_set.cc  s21_test_stack.cc  s21_test_vector.cc
